--- a/GorillaCosmetics/GorillaCosmetics.csproj
+++ b/GorillaCosmetics/GorillaCosmetics.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;F:\SteamLibrary\steamapps\common\Gorilla Tag\BepInEx\plugins\GorillaCosmetics&quot;" />
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(GORILLA_PATH)\BepInEx\plugins\GorillaCosmetics&quot;" />
   </Target>
 
 </Project>
