--- a/GorillaCosmetics/GorillaCosmetics.csproj
+++ b/GorillaCosmetics/GorillaCosmetics.csproj
@@ -17,6 +17,9 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>..\Libs\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="ComputerInterface">
+      <HintPath>..\Libs\ComputerInterface.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\Libs\Newtonsoft.Json.dll</HintPath>
     </Reference>
