--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,6 @@ FodyWeavers.xsd
 
 # Libs folder for BepinEx
 [Ll]ibs/
+
+# VSCode files (for people who can't use Visual Studio due to being superior)
+.vscode
