--- a/GorillaCosmetics/GorillaCosmetics.csproj
+++ b/GorillaCosmetics/GorillaCosmetics.csproj
@@ -47,7 +47,8 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(GORILLA_PATH)\BepInEx\plugins\GorillaCosmetics&quot;" />
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(GORILLA_PATH)\BepInEx\plugins\GorillaCosmetics&quot;" Condition="!$([MSBuild]::IsOSUnixLike())"/>
+    <Exec Command="mv &quot;$(TargetPath)&quot; &quot;$(GORILLA_PATH)/BepInEx/plugins/GorillaCosmetics&quot;" Condition="$([MSBuild]::IsOSUnixLike())"/>
   </Target>
 
 </Project>
