--- a/GorillaCosmetics/GorillaCosmetics.csproj
+++ b/GorillaCosmetics/GorillaCosmetics.csproj
@@ -47,8 +47,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(GORILLA_PATH)\BepInEx\plugins\GorillaCosmetics&quot;" Condition="!$([MSBuild]::IsOSUnixLike())"/>
-    <Exec Command="mv &quot;$(TargetPath)&quot; &quot;$(GORILLA_PATH)/BepInEx/plugins/GorillaCosmetics&quot;" Condition="$([MSBuild]::IsOSUnixLike())"/>
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(GORILLA_PATH)\BepInEx\plugins\GorillaCosmetics&quot;" />
   </Target>
 
 </Project>
